[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/settings.gd" type="Script" id=1]

[node name="Settings" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -153.0
margin_right = 290.0
margin_bottom = 153.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 580.0
margin_bottom = 212.0

[node name="LeftContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 285.0
margin_bottom = 212.0
size_flags_horizontal = 3

[node name="SensitivityLabel" type="Label" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
margin_right = 285.0
margin_bottom = 31.0
text = "Mouse Sensitivity: 0.50"

[node name="SensitivitySlider" type="HSlider" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
margin_top = 41.0
margin_right = 285.0
margin_bottom = 57.0
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.1

[node name="DrawDistanceLabel" type="Label" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
margin_top = 67.0
margin_right = 285.0
margin_bottom = 98.0
text = "Draw Distance: 500"

[node name="DrawDistanceSlider" type="HSlider" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
margin_top = 108.0
margin_right = 285.0
margin_bottom = 124.0
min_value = 100.0
max_value = 500.0
value = 100.0

[node name="GrassLabel" type="Label" parent="HBoxContainer/LeftContainer"]
margin_top = 134.0
margin_right = 285.0
margin_bottom = 165.0
text = "Amount of Grass:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrassOptionButton" type="OptionButton" parent="HBoxContainer/LeftContainer"]
unique_name_in_owner = true
margin_top = 175.0
margin_right = 285.0
margin_bottom = 212.0
text = "Maximum"
items = [ "Maximum", null, false, 0, null, "High", null, false, 1, null, "Medium", null, false, 2, null, "Low", null, false, 3, null, "None", null, false, 4, null ]
selected = 0

[node name="RightContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 295.0
margin_right = 580.0
margin_bottom = 212.0
size_flags_horizontal = 3

[node name="MusicVolumeLabel" type="Label" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
margin_right = 285.0
margin_bottom = 31.0
text = "Music Volume: 100"

[node name="MusicVolumeSlider" type="HSlider" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
margin_top = 41.0
margin_right = 285.0
margin_bottom = 57.0
value = 100.0

[node name="SoundVolumeLabel" type="Label" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
margin_top = 67.0
margin_right = 285.0
margin_bottom = 98.0
text = "Sound Volume: 100"

[node name="SoundVolumeSlider" type="HSlider" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
margin_top = 108.0
margin_right = 285.0
margin_bottom = 124.0
value = 100.0

[node name="MapLabel" type="Label" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
margin_top = 134.0
margin_right = 285.0
margin_bottom = 165.0
text = "Map:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapOptionButton" type="OptionButton" parent="HBoxContainer/RightContainer"]
unique_name_in_owner = true
margin_top = 175.0
margin_right = 285.0
margin_bottom = 212.0
text = "hub_1"
items = [ "hub_1", null, false, 0, null, "test_map", null, false, 1, null, "lake_map", null, false, 2, null ]
selected = 0

[node name="ToggleFullscreenButton" type="Button" parent="."]
margin_top = 222.0
margin_right = 580.0
margin_bottom = 259.0
size_flags_horizontal = 3
text = "Toggle Fullscreen"

[node name="BackButton" type="Button" parent="."]
margin_top = 269.0
margin_right = 580.0
margin_bottom = 306.0
text = "Back"

[connection signal="value_changed" from="HBoxContainer/LeftContainer/SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/LeftContainer/DrawDistanceSlider" to="." method="_on_DrawDistanceSlider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/LeftContainer/GrassOptionButton" to="." method="_on_GrassOptionButton_item_selected"]
[connection signal="value_changed" from="HBoxContainer/RightContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/RightContainer/SoundVolumeSlider" to="." method="_on_SoundVolumeSlider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/RightContainer/MapOptionButton" to="." method="_on_MapOptionButton_item_selected"]
[connection signal="pressed" from="ToggleFullscreenButton" to="." method="_on_ToggleFullscreenButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
